--- a/package.json
+++ b/package.json
@@ -9,33 +9,42 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.8",
+    "expo-permissions": "~14.2.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "^2.4.0",
-    "expo-updates": "~0.18.12",
+    "expo-updates": "^0.18.13",
     "formik": "^2.4.3",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "lottie-react-native": "5.1.6",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-asset": "^2.1.1",
     "react-native-circular-progress": "^1.3.9",
     "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-onboarding-swiper": "^1.2.0",
     "react-native-paper": "^5.10.3",
     "react-native-reanimated": "^3.3.0",
     "react-native-root-toast": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.0",
-    "yup": "^1.2.0"
+    "react-native-web": "~0.19.6",
+    "yup": "^1.2.0",
+    "expo-notifications": "~0.20.1",
+    "expo-device": "~5.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "prettier": "3.0.3"
   },
   "private": true
 }
