--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "^2.4.0",
-    "expo-updates": "~0.18.16",
+    "expo-updates": "~0.18.17",
     "formik": "^2.4.3",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
@@ -34,6 +34,7 @@
     "react-native-circular-progress": "^1.3.9",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gifted-charts": "^1.3.10",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-pager-view": "6.2.0",
