--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "lottie-react-native": "5.1.6",
+    "luxon": "^3.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
