--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-native-svg": "^13.9.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "@react-native-community/datetimepicker": "7.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
