--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/ngrok": "^4.1.1",
     "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
@@ -33,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-asset": "^2.1.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.3.9",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gifted-charts": "^1.3.10",
@@ -47,8 +49,7 @@
     "react-native-svg": "^13.9.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
-    "yup": "^1.2.0",
-    "@react-native-community/datetimepicker": "7.2.0"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
